      are considered core: dcmd dd-list debchange debcheckout debclean debdiff
      debsign debuild uscan.
  * debian/copyright:
    + Per the above definition of "core scripts", promote the following
      packages to Depends: fakeroot, file, gnupg|gnupg2, gpgv|gpgv2,
      libfile-which-perl, libwww-perl, patchutils, wdiff.

  [ Eli Uriegas ]
  * mk-build-deps:
    + Fix use of an uninitialized variable in build_equiv().  MR: !56

 -- Mattia Rizzolo <mattia@debian.org>  Tue, 09 Oct 2018 23:07:22 +0200

devscripts (2.18.6) unstable; urgency=medium

  [ Unit 193 ]
  * uscan:
    + Tweak the bash completion so directory names can be tab completed.

  [ Simon McVittie ]
  * sadt:
    + Ignore the new test restriction "superficial".  MR: !50

  [ Mattia Rizzolo ]
  * tests:
    + Fix autopkgtest that was failing due to missing test dependency
      on fakeroot.  Closes: #910262

 -- Mattia Rizzolo <mattia@debian.org>  Fri, 05 Oct 2018 01:00:11 +0200

devscripts (2.18.5) unstable; urgency=medium

  [ Antoine Beaupre ]
  * debchange:
    + Bump LTS version number from 7 to 8.  Closes: #908062

  [ Mattia Rizzolo ]
  * mk-build-deps:
    + Install the README used for the equivs package into a directory
      named /templates/ to avoid the new lintian tag
      package-contains-documentation-outside-usr-share-doc.
  * wrap-and-sort:
    + Update man-page to list the --dry-run option.  Closes: #908036
  * tests:
    + pylint:
      - Re-enable the test again.
      - Appease the new pylint rule useless-object-inheritance.
    + test_package_lifecycle:
      - Adapt the expected output for dpkg-source 1.19.1.  Closes: #909719
    + Use `set -u` in all the test files.
    + Move some the temporary directories into SHUNIT_TMPDIR, to have more
      assurances that they are cleaned up at the end.
    + In autopkgtest, avoid using the deprecated needs-recomends option, and
      instead explicitly list all the required packages.

  [ Benjamin Drung ]
  * test: