@@ -59,6 +59,7 @@ devscripts (2.18.7) UNRELEASED; urgency=medium
     + Per the above definition of "core scripts", promote the following
       packages to Depends: fakeroot, file, gnupg|gnupg2, gpgv|gpgv2,
       libfile-which-perl, libwww-perl, patchutils, wdiff.
+  * Generate the description of d/control from the content of the README.
 
   [ Eli Uriegas ]
   * mk-build-deps:
